# explorer_ws

./: .gitmodules  CMakeLists.txt  README.md  command.txt  explorer.urdf  package.xml
bringup/config/: explorer_controller.yaml
bringup/launch/: explorer_gazebo_classic.launch.py
description/gazebo/: explorer.gazebo.xacro
description/ros2_control/: explorer.ros2_control.xacro
description/rviz/: view_robot.rviz
description/urdf/: explorer.urdf.xacro  explorer_new_description.urdf.xacro  explorer_old_description.urdf.xacro
disabled_simulator/: CMakeLists.txt  package.xml
disabled_simulator/bringup/config/: simulation_controllers.yaml
disabled_simulator/bringup/launch/: simulation.launch.py
disabled_simulator/description/gazebo/: simulation.gazebo.xacro
disabled_simulator/description/ros2_control/: simulation.ros2_control.xacro
disabled_simulator/description/urdf/: explorer.srdf  simulation.urdf.xacro
explorer_on_wheelchair/: CMakeLists.txt  README.md  package.xml
explorer_on_wheelchair/bringup/config/: simulation_controllers.yaml
explorer_on_wheelchair/bringup/launch/: simu_pos_only.launch.py  simulation.launch.py  simulation_ign.launch.py  simulation_qp.launch.py
explorer_on_wheelchair/description/: README.md
explorer_on_wheelchair/description/gazebo/: simulation.gazebo.xacro  simulation_ign.gazebo.xacro
explorer_on_wheelchair/description/launch/: display.launch.py  view_explorer_on_wheelchair.launch.py
explorer_on_wheelchair/description/ros2_control/: simulation.ros2_control.xacro  simulation_ign.ros2_control.xacro
explorer_on_wheelchair/description/rviz/: simulation.rviz
explorer_on_wheelchair/description/urdf/: simulation.urdf.xacro  simulation_ign.urdf.xacro
explorer_on_wheelchair/description/worlds/: empty_world.world  simu.world
hardware/: explorer_hardware.cpp
laas_explorer_stack/laas_controller/: package.xml  setup.cfg  setup.py
laas_explorer_stack/laas_controller/laas_controller/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  acados_ocp_right_finger_joint_acados_model.json  acados_sim_right_finger_joint_acados_model.json  fk_orthopus_node.py  inverse_kinematics_node.py  main.py  mpc_orthopus (Copy).py  mpc_orthopus.py  mpc_orthopus_Test1.py  mpc_orthopus_joint_space.py  mpc_orthopus_working_with_ros.py  mpc_orthopus_working_withoutROS.py  save_urdf.py
laas_explorer_stack/laas_controller/launch/: laas_cartesian_control.launch.py
reference_generator/: send_trajectory.cpp
ros2_control_explorer/: CMakeLists.txt  explorer.gv  explorer.urdf  package.xml
ros2_control_explorer/description/urdf/: explorer_new_description.urdf.xacro  explorer_old_description.urdf.xacro
ros2_control_explorer/input_device/: device_spacenav.cpp
ros2_control_explorer/reference_generator/: spacenav_trajectory.cpp  spacenav_trajectory_ik.cpp  spacenav_trajectory_qp.cpp
ros2_control_wheelchair/: package.xml  ros2_control_wheelchair.xml
ros2_control_wheelchair/bringup/launch/: wheelchair_gazebo_classic.launch.py
ros2_control_wheelchair/description/gazebo/: wheelchair.gazebo.xacro
ros2_control_wheelchair/description/launch/: display.launch.py
ros2_control_wheelchair/description/meshes/: Permobil_F5_backrest.stl  Permobil_F5_headrest.stl  Permobil_F5_seat.stl
ros2_control_wheelchair/description/rviz/: wheelchair_view.rviz
ros2_control_wheelchair/description/urdf/: wheelchair.urdf.xacro  wheelchair_description.urdf.xacro  wheelchair_description_test.urdf.xacro  wheelchair_display.urdf.xacro
ros2_control_wheelchair/src/: teleop.cpp
test/: test_urdf_xacro.py  test_view_robot_launch.py
tools/: Dockerfile  build-iron-docker.sh  build-iron-docker_log.sh  run-iron-docker.sh  run-iron-docker_nosource.sh
wheelchair/ros2_control_wheelchair/: CMakeLists.txt
wheelchair/ros2_control_wheelchair/bringup/config/: wheelchair_controllers.yaml
wheelchair/ros2_control_wheelchair/description/meshes/collision/: seat.stl
wheelchair/ros2_control_wheelchair/description/meshes/visual/: headrest.dae  seat.dae
wheelchair/ros2_control_wheelchair/description/ros2_control/: wheelchair.ros2_control.xacro
wheelchair/ros2_control_wheelchair/description/urdf/: wheelchair.urdf.xacro
(+39 files in other folders)
